fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body{
     border-radius: 10px;
     width: 50%;
     opacity: 0.9;
+    padding: 10px;
 }
     
 h3{
